# smite

./: .gitignore  Makefile  README.md  run.sh
cuda/: CMakeLists.txt  main.cu
data/acts/: acts_prop_freq.csv
data/measurements/: data_binom_40_050_1.csv  data_binom_40_050_16.csv  data_binom_40_050_2.csv  data_binom_40_050_32.csv  data_binom_40_050_4.csv  data_binom_40_050_8.csv  data_geo_005_1.csv  data_geo_005_16.csv  data_geo_005_2.csv  data_geo_005_32.csv  data_geo_005_4.csv  data_geo_005_8.csv  data_nbinom_5_030_1.csv  data_nbinom_5_030_16.csv  data_nbinom_5_030_2.csv  data_nbinom_5_030_32.csv  data_nbinom_5_030_4.csv  data_nbinom_5_030_8.csv  data_pois_30_1.csv  data_pois_30_16.csv  data_pois_30_2.csv  data_pois_30_32.csv  data_pois_30_4.csv  data_pois_30_8.csv  data_uniform_20_40_1.csv  data_uniform_20_40_16.csv  data_uniform_20_40_2.csv  data_uniform_20_40_32.csv  data_uniform_20_40_4.csv  data_uniform_20_40_8.csv
data/models/: model_acts_prop_16.csv  model_acts_prop_2.csv  model_acts_prop_32.csv  model_acts_prop_4.csv  model_acts_prop_8.csv  model_bernoulli_050_16.csv  model_bernoulli_050_2.csv  model_bernoulli_050_32.csv  model_bernoulli_050_4.csv  model_bernoulli_050_8.csv  model_binom_40_050_16.csv  model_binom_40_050_2.csv  model_binom_40_050_32.csv  model_binom_40_050_4.csv  model_binom_40_050_8.csv  (+17 more)
gnuplot/: horizontal.gnuplot  its.gnuplot  pmf.gnuplot  pmf_single.gnuplot  results.gnuplot
python/: common.py  create_graph_histogram.py  create_horizontal.py  create_its_data.py  create_mean_table.py  create_miniapp_table.py  create_model.py
